get user after rrgistration

--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -1,7 +1,7 @@
 {
     "home": "الصفحة الرئيسية",
     "events": "فعاليات",
-    "login": "الدخول أو تسجيل الحساب الجديد",
+    "login": "تسجيل الدخول",
     "tagline": "...برانا حنبنيهو",
     "lang": "اللغة المختارة",
     "about": "من نحن؟",
@@ -11,9 +11,9 @@
     "information": "اكتب بالاختصار عن نفسك",
     "cancel": "إلغاء",
     "come_in": "الدخول",
-    "registration": "تسجيل الحساب الجديد",
+    "registration": "إنشاء الحساب",
     "login_title": "الدخول",
-    "registration_title": "إنشاء الحساب الجديد",
-    "number_call": "رقم التواصل"
+    "number_call": "رقم التواصل",
+    "no_account_question": "ليس عندك حساب؟"
 
 }
